Totally fixed fig caption alignment

--- a/Greenhill_Sarah_project2/css/main.css
+++ b/Greenhill_Sarah_project2/css/main.css
@@ -208,7 +208,7 @@ ol {
 
 #imgContainer a, figcaption{  
     padding-left: 250px;
-    padding-right: 300px;                    
+    padding-right: 150px;                    
 	margin: 0 auto;
 	border: none;
 	text-align: center;
